corpus/baselines/compiler/recursivelyExpandingUnionNoStackoverflow.errors.txt
recursivelyExpandingUnionNoStackoverflow.ts(3,10): error TS2615: Type of property 'M' circularly references itself in mapped type '{ [P in "M"]: any; }'.


==== recursivelyExpandingUnionNoStackoverflow.ts (1 errors) ====
    type N<T, K extends string> = T | { [P in K]: N<T, K> }[K];
    
    type M = N<number, "M">;
             ~~~~~~~~~~~~~~
!!! error TS2615: Type of property 'M' circularly references itself in mapped type '{ [P in "M"]: any; }'.